[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "pandas>=3.0.3",
    "pinecone>=9.0.1",
    "pymysql>=1.2.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "sqlparse>=0.5.5",
    "streamlit>=1.23.1",
    "typing-extensions>=4.7.1",
]
